--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -10,6 +10,16 @@
     border-radius: 50%;
 }
 
+.edit_user_image {
+    width: 50%;
+    height: 20em;
+    border-radius: 50%;
+}
+
+.errors {
+
+}
+
 .photo-info-box {
     border: 1px solid #e5e5e5;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
